The drawing canvas was broken on iPhone, fixed

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <div id='messagesDiv'></div>
       <input type='text' id='nameInput' placeholder='Name' disabled>
       <input type='text' id='messageInput' placeholder='Message'>
-      <div>
-        <canvas id="drawing-canvas" width="480" height="420"></canvas>
-      </div>
-      <div id="colorholder"></div>
     </div>
+    <div id="canvasdiv">
+      <canvas id="drawing-canvas" width="480" height="420"></canvas>
+    </div>
+    <div id="colorholder"></div>
     <script>
     var oldHeight = 0;
 function resizeMessagesDiv(e) {
